ConsoleApplication1/testParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g 2017-12-18 12:54:43

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


	using System;
	using ConsoleApplication1;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class testParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDOP", "BOOL", "BY", "CHAR", "CLOSEBRACKET", "CLOSEFIGUREBRACKET", "DECLAR", "DIGIT", "DO", "DOUBLEPOINT", "ELSE", "ENDOP", "EXPONENT", "FLOAT", "ID", "IF", "INITIALIZE", "INT", "LETTER", "LOGIC_OP", "MULTOP", "OPENBRACKET", "OPENFIGUREBRACKET", "OPSRAVN", "SPACE", "SWITCH", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int ADDOP=4;
	public const int BOOL=5;
	public const int BY=6;
	public const int CHAR=7;
	public const int CLOSEBRACKET=8;
	public const int CLOSEFIGUREBRACKET=9;
	public const int DECLAR=10;
	public const int DIGIT=11;
	public const int DO=12;
	public const int DOUBLEPOINT=13;
	public const int ELSE=14;
	public const int ENDOP=15;
	public const int EXPONENT=16;
	public const int FLOAT=17;
	public const int ID=18;
	public const int IF=19;
	public const int INITIALIZE=20;
	public const int INT=21;
	public const int LETTER=22;
	public const int LOGIC_OP=23;
	public const int MULTOP=24;
	public const int OPENBRACKET=25;
	public const int OPENFIGUREBRACKET=26;
	public const int OPSRAVN=27;
	public const int SPACE=28;
	public const int SWITCH=29;
	public const int WHILE=30;
	public const int WS=31;

	public testParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public testParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		OnCreated();
	}

	public override string[] TokenNames { get { return testParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g"; } }


	  Emitter emitter; 
	  public testParser(ITokenStream input, Emitter emitter)
	  	: this(input) 
	  {
	    this.emitter = emitter;
	  }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:20:1: public program : ( stmt )+ ;
	[GrammarRule("program")]
	public void program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(20, 38);
		try
		{
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:20:9: ( ( stmt )+ )
			DebugEnterAlt(1);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:20:11: ( stmt )+
			{
			DebugLocation(20, 11);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:20:11: ( stmt )+
			int cnt1=0;
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==DECLAR||(LA1_0>=ID && LA1_0<=IF)||(LA1_0>=SWITCH && LA1_0<=WHILE)))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch (alt1)
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:20:12: stmt
					{
					DebugLocation(20, 12);
					PushFollow(Follow._stmt_in_program39);
					stmt();
					PopFollow();


					}
					break;

				default:
					if (cnt1 >= 1)
						goto loop1;

					EarlyExitException eee1 = new EarlyExitException( 1, input );
					DebugRecognitionException(eee1);
					throw eee1;
				}
				cnt1++;
			}
			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(20, 19);
			emitter.AddHalt();

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(20, 38);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return;

	}
	// $ANTLR end "program"

	partial void EnterRule_stmt();
	partial void LeaveRule_stmt();

	// $ANTLR start "stmt"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:22:1: public stmt : ( declar_stmt | assign_stmt | cycle_stmt | if_stmt | switch_stmt );
	[GrammarRule("stmt")]
	public void stmt()
	{
		EnterRule_stmt();
		EnterRule("stmt", 2);
		TraceIn("stmt", 2);
		try { DebugEnterRule(GrammarFileName, "stmt");
		DebugLocation(22, 60);
		try
		{
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:22:5: ( declar_stmt | assign_stmt | cycle_stmt | if_stmt | switch_stmt )
			int alt2=5;
			try { DebugEnterDecision(2, false);
			switch (input.LA(1))
			{
			case DECLAR:
				{
				alt2 = 1;
				}
				break;
			case ID:
				{
				alt2 = 2;
				}
				break;
			case WHILE:
				{
				alt2 = 3;
				}
				break;
			case IF:
				{
				alt2 = 4;
				}
				break;
			case SWITCH:
				{
				alt2 = 5;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:22:7: declar_stmt
				{
				DebugLocation(22, 7);
				PushFollow(Follow._declar_stmt_in_stmt51);
				declar_stmt();
				PopFollow();


				}
				break;
			case 2:
				DebugEnterAlt(2);
				// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:22:19: assign_stmt
				{
				DebugLocation(22, 19);
				PushFollow(Follow._assign_stmt_in_stmt53);
				assign_stmt();
				PopFollow();


				}
				break;
			case 3:
				DebugEnterAlt(3);
				// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:22:31: cycle_stmt
				{
				DebugLocation(22, 31);
				PushFollow(Follow._cycle_stmt_in_stmt55);
				cycle_stmt();
				PopFollow();


				}
				break;
			case 4:
				DebugEnterAlt(4);
				// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:22:42: if_stmt
				{
				DebugLocation(22, 42);
				PushFollow(Follow._if_stmt_in_stmt57);
				if_stmt();
				PopFollow();


				}
				break;
			case 5:
				DebugEnterAlt(5);
				// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:22:50: switch_stmt
				{
				DebugLocation(22, 50);
				PushFollow(Follow._switch_stmt_in_stmt59);
				switch_stmt();
				PopFollow();


				}
				break;

			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("stmt", 2);
			LeaveRule("stmt", 2);
			LeaveRule_stmt();
		}
		DebugLocation(22, 60);
		} finally { DebugExitRule(GrammarFileName, "stmt"); }
		return;

	}
	// $ANTLR end "stmt"

	partial void EnterRule_declar_stmt();
	partial void LeaveRule_declar_stmt();

	// $ANTLR start "declar_stmt"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:25:1: public declar_stmt : DECLAR SPACE operand ENDOP ;
	[GrammarRule("declar_stmt")]
	public void declar_stmt()
	{
		EnterRule_declar_stmt();
		EnterRule("declar_stmt", 3);
		TraceIn("declar_stmt", 3);
		try { DebugEnterRule(GrammarFileName, "declar_stmt");
		DebugLocation(25, 39);
		try
		{
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:25:12: ( DECLAR SPACE operand ENDOP )
			DebugEnterAlt(1);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:25:14: DECLAR SPACE operand ENDOP
			{
			DebugLocation(25, 14);
			Match(input,DECLAR,Follow._DECLAR_in_declar_stmt68); 
			DebugLocation(25, 21);
			Match(input,SPACE,Follow._SPACE_in_declar_stmt70); 
			DebugLocation(25, 27);
			PushFollow(Follow._operand_in_declar_stmt72);
			operand();
			PopFollow();

			DebugLocation(25, 35);
			Match(input,ENDOP,Follow._ENDOP_in_declar_stmt74); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("declar_stmt", 3);
			LeaveRule("declar_stmt", 3);
			LeaveRule_declar_stmt();
		}
		DebugLocation(25, 39);
		} finally { DebugExitRule(GrammarFileName, "declar_stmt"); }
		return;

	}
	// $ANTLR end "declar_stmt"

	partial void EnterRule_assign_stmt();
	partial void LeaveRule_assign_stmt();

	// $ANTLR start "assign_stmt"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:27:1: public assign_stmt : ID INITIALIZE expr ENDOP ;
	[GrammarRule("assign_stmt")]
	public void assign_stmt()
	{
		EnterRule_assign_stmt();
		EnterRule("assign_stmt", 4);
		TraceIn("assign_stmt", 4);
		IToken ID1 = default(IToken);

		try { DebugEnterRule(GrammarFileName, "assign_stmt");
		DebugLocation(27, 104);
		try
		{
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:27:12: ( ID INITIALIZE expr ENDOP )
			DebugEnterAlt(1);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:27:14: ID INITIALIZE expr ENDOP
			{
			DebugLocation(27, 14);
			ID1=(IToken)Match(input,ID,Follow._ID_in_assign_stmt82); 
			DebugLocation(27, 18);
			emitter.AddLValue((ID1!=null?ID1.Text:null)); 
			DebugLocation(27, 51);
			Match(input,INITIALIZE,Follow._INITIALIZE_in_assign_stmt88); 
			DebugLocation(27, 63);
			PushFollow(Follow._expr_in_assign_stmt91);
			expr();
			PopFollow();

			DebugLocation(27, 68);
			emitter.AddAssignStatement();
			DebugLocation(27, 100);
			Match(input,ENDOP,Follow._ENDOP_in_assign_stmt95); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("assign_stmt", 4);
			LeaveRule("assign_stmt", 4);
			LeaveRule_assign_stmt();
		}
		DebugLocation(27, 104);
		} finally { DebugExitRule(GrammarFileName, "assign_stmt"); }
		return;

	}
	// $ANTLR end "assign_stmt"

	partial void EnterRule_cycle_stmt();
	partial void LeaveRule_cycle_stmt();

	// $ANTLR start "cycle_stmt"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:31:1: public cycle_stmt : WHILE log_operation DO OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET ;
	[GrammarRule("cycle_stmt")]
	public void cycle_stmt()
	{
		EnterRule_cycle_stmt();
		EnterRule("cycle_stmt", 5);
		TraceIn("cycle_stmt", 5);
		try { DebugEnterRule(GrammarFileName, "cycle_stmt");
		DebugLocation(31, 62);
		try
		{
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:32:2: ( WHILE log_operation DO OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET )
			DebugEnterAlt(1);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:32:5: WHILE log_operation DO OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET
			{
			DebugLocation(32, 5);
			Match(input,WHILE,Follow._WHILE_in_cycle_stmt108); 
			DebugLocation(32, 11);
			emitter.Add_Label_Condition();
			DebugLocation(32, 44);
			PushFollow(Follow._log_operation_in_cycle_stmt112);
			log_operation();
			PopFollow();

			DebugLocation(32, 58);
			emitter.Add_GoFalse_End_While();
			DebugLocation(32, 93);
			Match(input,DO,Follow._DO_in_cycle_stmt116); 
			DebugLocation(32, 97);
			Match(input,OPENFIGUREBRACKET,Follow._OPENFIGUREBRACKET_in_cycle_stmt119); 
			DebugLocation(32, 115);
			PushFollow(Follow._stmt_or_block_in_cycle_stmt121);
			stmt_or_block();
			PopFollow();

			DebugLocation(32, 129);
			Match(input,CLOSEFIGUREBRACKET,Follow._CLOSEFIGUREBRACKET_in_cycle_stmt123); 
			DebugLocation(33, 2);
			emitter.Add_Goto_Condition(); emitter.AddLabel_End_While();

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("cycle_stmt", 5);
			LeaveRule("cycle_stmt", 5);
			LeaveRule_cycle_stmt();
		}
		DebugLocation(33, 62);
		} finally { DebugExitRule(GrammarFileName, "cycle_stmt"); }
		return;

	}
	// $ANTLR end "cycle_stmt"

	partial void EnterRule_if_stmt();
	partial void LeaveRule_if_stmt();

	// $ANTLR start "if_stmt"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:38:1: public if_stmt : IF log_operation OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET ( ELSE OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET )? ;
	[GrammarRule("if_stmt")]
	public void if_stmt()
	{
		EnterRule_if_stmt();
		EnterRule("if_stmt", 6);
		TraceIn("if_stmt", 6);
		try { DebugEnterRule(GrammarFileName, "if_stmt");
		DebugLocation(38, 1);
		try
		{
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:38:9: ( IF log_operation OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET ( ELSE OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET )? )
			DebugEnterAlt(1);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:38:11: IF log_operation OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET ( ELSE OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET )?
			{
			DebugLocation(38, 11);
			Match(input,IF,Follow._IF_in_if_stmt139); 
			DebugLocation(38, 14);
			PushFollow(Follow._log_operation_in_if_stmt141);
			log_operation();
			PopFollow();

			DebugLocation(38, 28);
			emitter.Add_GoFalse_Else_or_EndIf();
			DebugLocation(38, 67);
			Match(input,OPENFIGUREBRACKET,Follow._OPENFIGUREBRACKET_in_if_stmt145); 
			DebugLocation(38, 85);
			PushFollow(Follow._stmt_or_block_in_if_stmt147);
			stmt_or_block();
			PopFollow();

			DebugLocation(38, 99);
			Match(input,CLOSEFIGUREBRACKET,Follow._CLOSEFIGUREBRACKET_in_if_stmt149); 
			DebugLocation(38, 118);
			emitter.Add_Label_Else_or_EndIf();
			DebugLocation(38, 155);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:38:155: ( ELSE OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET )?
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			int LA3_0 = input.LA(1);

			if ((LA3_0==ELSE))
			{
				alt3 = 1;
			}
			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:38:156: ELSE OPENFIGUREBRACKET stmt_or_block CLOSEFIGUREBRACKET
				{
				DebugLocation(38, 156);
				Match(input,ELSE,Follow._ELSE_in_if_stmt154); 
				DebugLocation(38, 161);
				Match(input,OPENFIGUREBRACKET,Follow._OPENFIGUREBRACKET_in_if_stmt156); 
				DebugLocation(38, 179);
				PushFollow(Follow._stmt_or_block_in_if_stmt158);
				stmt_or_block();
				PopFollow();

				DebugLocation(38, 193);
				Match(input,CLOSEFIGUREBRACKET,Follow._CLOSEFIGUREBRACKET_in_if_stmt160); 
				DebugLocation(38, 212);
				emitter.Add_Label_EndElse();

				}
				break;

			}
			} finally { DebugExitSubRule(3); }


			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("if_stmt", 6);
			LeaveRule("if_stmt", 6);
			LeaveRule_if_stmt();
		}
		DebugLocation(39, 1);
		} finally { DebugExitRule(GrammarFileName, "if_stmt"); }
		return;

	}
	// $ANTLR end "if_stmt"

	partial void EnterRule_switch_stmt();
	partial void LeaveRule_switch_stmt();

	// $ANTLR start "switch_stmt"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:42:1: public switch_stmt : SWITCH ID OPENFIGUREBRACKET ( cases )+ CLOSEFIGUREBRACKET ;
	[GrammarRule("switch_stmt")]
	public void switch_stmt()
	{
		EnterRule_switch_stmt();
		EnterRule("switch_stmt", 7);
		TraceIn("switch_stmt", 7);
		IToken ID2 = default(IToken);

		try { DebugEnterRule(GrammarFileName, "switch_stmt");
		DebugLocation(42, 90);
		try
		{
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:43:2: ( SWITCH ID OPENFIGUREBRACKET ( cases )+ CLOSEFIGUREBRACKET )
			DebugEnterAlt(1);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:43:3: SWITCH ID OPENFIGUREBRACKET ( cases )+ CLOSEFIGUREBRACKET
			{
			DebugLocation(43, 3);
			Match(input,SWITCH,Follow._SWITCH_in_switch_stmt176); 
			DebugLocation(43, 10);
			ID2=(IToken)Match(input,ID,Follow._ID_in_switch_stmt178); 
			DebugLocation(43, 13);
			Match(input,OPENFIGUREBRACKET,Follow._OPENFIGUREBRACKET_in_switch_stmt180); 
			DebugLocation(43, 31);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:43:31: ( cases )+
			int cnt4=0;
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_0 = input.LA(1);

				if ((LA4_0==BY))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch (alt4)
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:43:33: cases
					{
					DebugLocation(43, 33);
					emitter.AddLoadID((ID2!=null?ID2.Text:null)); 
					DebugLocation(43, 65);
					PushFollow(Follow._cases_in_switch_stmt186);
					cases();
					PopFollow();


					}
					break;

				default:
					if (cnt4 >= 1)
						goto loop4;

					EarlyExitException eee4 = new EarlyExitException( 4, input );
					DebugRecognitionException(eee4);
					throw eee4;
				}
				cnt4++;
			}
			loop4:
				;

			} finally { DebugExitSubRule(4); }

			DebugLocation(43, 73);
			Match(input,CLOSEFIGUREBRACKET,Follow._CLOSEFIGUREBRACKET_in_switch_stmt190); 

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("switch_stmt", 7);
			LeaveRule("switch_stmt", 7);
			LeaveRule_switch_stmt();
		}
		DebugLocation(43, 90);
		} finally { DebugExitRule(GrammarFileName, "switch_stmt"); }
		return;

	}
	// $ANTLR end "switch_stmt"

	partial void EnterRule_cases();
	partial void LeaveRule_cases();

	// $ANTLR start "cases"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:45:1: public cases : BY const DOUBLEPOINT stmt_or_block ;
	[GrammarRule("cases")]
	public void cases()
	{
		EnterRule_cases();
		EnterRule("cases", 8);
		TraceIn("cases", 8);
		String const3 = default(String);

		try { DebugEnterRule(GrammarFileName, "cases");
		DebugLocation(45, 1);
		try
		{
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:45:7: ( BY const DOUBLEPOINT stmt_or_block )
			DebugEnterAlt(1);
			// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:45:9: BY const DOUBLEPOINT stmt_or_block
			{
			DebugLocation(45, 9);
			Match(input,BY,Follow._BY_in_cases199); 
			DebugLocation(45, 13);
			PushFollow(Follow._const_in_cases202);
			const3=@const();
			PopFollow();

			DebugLocation(45, 19);
			emitter.AddLoadConst(const3); emitter.AddEq(); emitter.AddGOFALSE_END_CASE(); 
			DebugLocation(45, 106);
			Match(input,DOUBLEPOINT,Follow._DOUBLEPOINT_in_cases206); 
			DebugLocation(45, 118);
			PushFollow(Follow._stmt_or_block_in_cases208);
			stmt_or_block();
			PopFollow();

			DebugLocation(45, 132);
			emitter.AddLABEL_END_CASE();

			}

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		}
		finally
		{
			TraceOut("cases", 8);
			LeaveRule("cases", 8);
			LeaveRule_cases();
		}
		DebugLocation(46, 1);
		} finally { DebugExitRule(GrammarFileName, "cases"); }
		return;

	}
	// $ANTLR end "cases"

	partial void EnterRule_term();
	partial void LeaveRule_term();

	// $ANTLR start "term"
	// D:\\1 NDATA(05.07.16)\\!_SOKOLOVA_!\\!_SEMESTR_7!\\LABS\\TIPS\\курсоваяANTLR_Соколова\\test.g:52:1: term : ( OPENBRACKET factor MULTOP factor CLOSEBRACKET | factor );
	[GrammarRule("term")]
	private void term()
	{
		EnterRule_term();
		EnterRule("term", 9);
		TraceIn("term", 9);
		IToken MULTOP4 = default(IToken);

		try { DebugEnterRule(GrammarFileName, "term");
		DebugLocation(52, 11);
		try
		{
